--- a/index.html
+++ b/index.html
@@ -1,35 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Student Login</title>
-<link rel="stylesheet" href="style.css">
-</head>
-<body class="login-bg">
-<div class="login-box">
-  <h2>Student Login</h2>
-  <input type="text" id="username" placeholder="Username">
-  <input type="password" id="password" placeholder="Password">
-  <button onclick="login()">Login</button>
-</div>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Login - EduSphere</title>
+<style>
+  body {
+    margin: 0;
+    height: 100vh;
+    background: linear-gradient(135deg, #6a11cb, #2575fc);
+    font-family: Arial, sans-serif;
+    color: white;
+    overflow-x: hidden;
+  }
 
-<script>
-function login(){
-  const username = document.getElementById("username").value;
-  const password = document.getElementById("password").value;
-  if(username && password){
-    localStorage.setItem("student", JSON.stringify({
-      name: username,
-      points: 0,
-      sosHistory: [],
-      performance: {Math: 80, Science: 70, English: 90},
-      attendance: "85%",
-      skills: [],
-      doubts: []
-    }));
-    window.location.href = "dashboard.html";
-  } else alert("Please fill all fields!");
-}
-</script>
+  /* Sliding welcome text fixed at top */
+  .welcome-text {
+    position: fixed;
+    top: 10px;
+    left: -100%;
+    white-space: nowrap;
+    font-size: 24px;
+    font-weight: bold;
+    animation: slideRight 8s linear infinite;
+  }
+
+  @keyframes slideRight {
+    0% {
+      left: -100%;
+    }
+    100% {
+      left: 100%;
+    }
+  }
+
+  /* Center login container */
+  .login-container {
+    position: relative;
+    top: 80px;
+    margin: auto;
+    width: 320px;
+    background: rgba(0, 0, 0, 0.5);
+    padding: 40px;
+    border-radius: 12px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.3);
+    text-align: center;
+  }
+
+  input[type="text"], input[type="password"] {
+    width: 100%;
+    padding: 12px 15px;
+    margin: 10px 0 20px 0;
+    border: none;
+    border-radius: 6px;
+  }
+
+  button {
+    width: 100%;
+    padding: 12px;
+    background-color: #2575fc;
+    border: none;
+    border-radius: 6px;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+  }
+
+  button:hover {
+    background-color: #4a90e2;
+  }
+</style>
+</head>
+<body>
+
+  <div class="welcome-text">Welcome to EduSphere</div>
+
+  <div class="login-container">
+    <form>
+      <input type="text" placeholder="Username" required />
+      <input type="password" placeholder="Password" required />
+      <button type="submit">Login</button>
+    </form>
+  </div>
+
 </body>
 </html>
